# universal-knowledge-intelligence-platform

./: .dockerignore  .env.dokploy.example  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .trivyignore  API.md  CHANGELOG.md  DESIGN.md  Dockerfile.backend  README.md  docker-compose.prod.yml  docker-compose.yml  leak-test.txt  requirements-scholar.txt  requirements.txt  start-local-wsl.ps1  start.bat  test_api_import.py  test_openalex_import.py
.claude/: launch.json  settings.local.json
.github/: dependabot.yml
backend/: api_key_scopes.py  audit.py  auth.py  backup_assurance.py  backup_assurance_ddl.py  bootstrap.py  circuit_breaker.py  config.py  context_engine.py  database.py  db_config.py  db_revision.py  domain_scope.py  encryption.py  enrichment_worker.py  enterprise_controls.py  enterprise_readiness.py  entity_linker.py  main.py  main_backup_sprint36.py  models.py  olap.py  openapi_ids.py  ops_checks.py  quality_scorer.py  report_builder.py  schema_registry.py  schemas.py  schemas_backup.py  schemas_enrichment.py  secret_rotation.py  tool_registry.py  workflow_engine.py
docker/: backend-entrypoint.sh
docs/: API.md  README.md  (+13 more)
engine/: .dockerignore  Cargo.toml  Dockerfile  build.rs
engine/benches/: graph_materialization.rs  text_analysis.rs
engine/proto/ukip/engine/v1/: engine.proto
engine/src/: config.rs  jobs.rs  lib.rs  main.rs  progress.rs  router.rs  server.rs
engine/src/db/: bulk_writer.rs  job_store.rs  mod.rs  pool.rs  schema.rs
engine/src/pipelines/: mod.rs
engine/src/pipelines/analytics/: clustering.rs  correlation.rs  mod.rs  pmi.rs  topics.rs
engine/src/pipelines/authority/: fuzzy.rs  mod.rs  normalize.rs  scoring.rs
engine/src/pipelines/connectors/: crossref.rs  mod.rs  openalex.rs  pubmed.rs  rate_limiter.rs  retry.rs
engine/src/pipelines/disambiguation/: mod.rs
engine/src/pipelines/graph/: canonical.rs  dedup.rs  mod.rs  nodes.rs  relationships.rs
engine/src/pipelines/normalization/: mod.rs
engine/src/pipelines/text_analysis/: classifier.rs  keywords.rs  language.rs  mod.rs  stopwords_en.txt  tokenizer.rs
engine/tests/: golden_analytics.json  golden_analytics.rs  golden_authority.json  golden_authority.rs  load_smoke.rs
(+1243 files in other folders)
