[package]
name = "ukip-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
strsim = "0.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
unicode-segmentation = "1"
unicode-normalization = "0.1"
regex = "1"
urlencoding = "2"
thiserror = "2"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"

[features]
integration = []
grpc = []

[[bench]]
name = "graph_materialization"
harness = false

[[bench]]
name = "text_analysis"
harness = false
